--- a/TP_ETL_con_Pandas.ipynb
+++ b/TP_ETL_con_Pandas.ipynb
@@ -10,7 +10,7 @@
     "**Alumno:** Cristian Bartolome Albarracin\n",
     "**Cohorte/Año:** 2025\n",
     "\n",
-    "> Este notebook guía el proceso ETL: **Extract → Transform → Load**, más un **análisis exploratorio** y **carga a MariaDB/MySQL**.\n",
+    "> Este notebook guía el proceso ETL: **Extract → Transform → Load**, más un **análisis exploratorio** y **carga a MySQL**.\n",
     "> Dataset de ejemplo sugerido: “Sales and Customer data” (Kaggle). Descargue los archivos `customer_data.csv` y `sales_data.csv` al directorio `data/`.\n"
    ]
   },
