--- a/TP_ETL_con_Pandas.ipynb
+++ b/TP_ETL_con_Pandas.ipynb
@@ -1122,7 +1122,7 @@
    "id": "eaa909fb",
    "metadata": {},
    "source": [
-    "## 4. Carga a MariaDB/MySQL y consultas SQL\n",
+    "## 4. Carga a MySQL y consultas SQL\n",
     "> Opción A: usar `pandas.to_sql` (rápido para tablas pequeñas).  \n",
     "> Opción B: crear tabla y usar `LOAD DATA INFILE` desde el servidor.\n"
    ]
